Frame jSliderHangerő fix

--- a/src/aft2022t/Frame.form
+++ b/src/aft2022t/Frame.form
@@ -60,12 +60,12 @@
                   <Group type="102" alignment="1" attributes="0">
                       <Group type="103" groupAlignment="0" attributes="0">
                           <Group type="102" attributes="0">
-                              <EmptySpace min="-2" pref="27" max="-2" attributes="0"/>
-                              <Component id="jSliderHangerő" min="-2" max="-2" attributes="0"/>
-                          </Group>
-                          <Group type="102" alignment="0" attributes="0">
                               <EmptySpace min="-2" pref="112" max="-2" attributes="0"/>
                               <Component id="jLabel4" min="-2" max="-2" attributes="0"/>
+                          </Group>
+                          <Group type="102" alignment="0" attributes="0">
+                              <EmptySpace min="-2" pref="27" max="-2" attributes="0"/>
+                              <Component id="jSliderHangerő" min="-2" pref="173" max="-2" attributes="0"/>
                           </Group>
                       </Group>
                       <EmptySpace max="32767" attributes="0"/>
@@ -177,6 +177,7 @@
     </Component>
     <Component class="javax.swing.JSlider" name="jSliderHanger&#x151;">
       <Properties>
+        <Property name="maximum" type="int" value="50"/>
         <Property name="value" type="int" value="0"/>
       </Properties>
       <Events>
